# FT-GPI

./: CMakeLists.txt  FT_GPI.cpp  README.md
example/: example.gpi  example.gpi_err
include/: dependent_parts.h  ftgpi.h  tables.h  tmpred.h  ureadseq.h
